--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -21,5 +21,5 @@ eureka:
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
-  type-aliases-package: com.gxy.springcloud.entity    # 所有Entity别名类所在包
+  type-aliases-package: com.gxy.springcloud    # 所有Entity别名类所在包
 
