--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>cloud-config-client-3355</module>
         <module>cloudalibaba-provider-payment9001</module>
         <module>cloudalibaba-provider-payment9002</module>
+        <module>cloudalibaba-consumer-nacos-order83</module>
     </modules>
     <packaging>pom</packaging><!-- 这里添加，注意不是jar或war -->
 
